[gd_scene load_steps=22 format=3 uid="uid://bgj2jybr62jjw"]

[ext_resource type="Script" path="res://screens/activities/02/tasks/sound_a2.gd" id="1_tdm27"]
[ext_resource type="Texture2D" uid="uid://pexulgj4lso1" path="res://assets/images/boy/face.png" id="2_lqufx"]
[ext_resource type="Texture2D" uid="uid://b8y3jo1y8udui" path="res://assets/images/boy/mouth.png" id="3_0nyda"]
[ext_resource type="Texture2D" uid="uid://d21ixew503ufp" path="res://assets/images/boy/mouth_a.png" id="4_8rkmb"]
[ext_resource type="Texture2D" uid="uid://bvb7wagfg7ogt" path="res://assets/images/boy/no_x.png" id="5_4qibo"]
[ext_resource type="Texture2D" uid="uid://b6bj2h26rmxvh" path="res://assets/images/boy/hand.png" id="6_8shjm"]
[ext_resource type="AudioStream" uid="uid://wgo7pdu1y0cx" path="res://assets/voices/phonemes/a.mp3" id="7_gyv2v"]
[ext_resource type="AudioStream" uid="uid://dghyd3yi6brkb" path="res://assets/voices/02/no_vibracion_pronunciacion.mp3" id="8_5barq"]
[ext_resource type="PackedScene" uid="uid://c8kqfmnhflg6m" path="res://components/record_button.tscn" id="8_alq2t"]
[ext_resource type="PackedScene" uid="uid://jriwlk872m4b" path="res://components/confetti_effect.tscn" id="9_0lwa4"]
[ext_resource type="Script" path="res://scripts/prediction_component.gd" id="9_dw1um"]
[ext_resource type="AudioStream" uid="uid://cqd4ix3fd38k6" path="res://assets/voices/02/presiona_boton_pronuncia.mp3" id="10_v7ey0"]

[sub_resource type="Animation" id="Animation_atwdr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MouthA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NoX:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bwxb7"]
resource_name = "no_vibration"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MouthA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NoX:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.329877, 1, 2.21914),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.335, 1.335), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kt60c"]
resource_name = "phoneme_a"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MouthA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(0.241484, 1, 1, 2.21914),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Narrator")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_gyv2v")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7h7xf"]
_data = {
"RESET": SubResource("Animation_atwdr"),
"no_vibration": SubResource("Animation_bwxb7"),
"phoneme_a": SubResource("Animation_kt60c")
}

[sub_resource type="Animation" id="Animation_572a3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(108, 344)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/RecordButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/RecordButton:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.85, 0.85)]
}

[sub_resource type="Animation" id="Animation_x85sd"]
resource_name = "intro"
length = 4.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(108, 344), Vector2(108, 344)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Vector2(0.375, 0.375), Vector2(1, 1)]
}
tracks/3/type = "animation"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/Face/FaceAnimator")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": PackedStringArray("no_vibration", "phoneme_a"),
"times": PackedFloat32Array(0.8, 4)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/RecordButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(4.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_statement_animation"
}]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Narrator")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_5barq")
}],
"times": PackedFloat32Array(0.2)
}
tracks/6/use_blend = true

[sub_resource type="Animation" id="Animation_e0klw"]
resource_name = "outro"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1.51572, 0.353553),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2, 0.31864),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.44, 0.44)]
}

[sub_resource type="Animation" id="Animation_daf3q"]
resource_name = "statement"
length = 3.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Face:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.34151, 1),
"update": 0,
"values": [Vector2(108, 344), Vector2(108, 212)]
}
tracks/3/type = "animation"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/Face/FaceAnimator")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": PackedStringArray("phoneme_a"),
"times": PackedFloat32Array(3.1)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/RecordButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Container/RecordButton:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(0.277392, 1, 2.54912),
"update": 0,
"values": [Vector2(0.85, 0.85), Vector2(0.9, 0.9), Vector2(0.85, 0.85)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_interactions"
}]
}
tracks/7/type = "audio"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Narrator")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_v7ey0")
}],
"times": PackedFloat32Array(0.2)
}
tracks/7/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbtgw"]
_data = {
"RESET": SubResource("Animation_572a3"),
"intro": SubResource("Animation_x85sd"),
"outro": SubResource("Animation_e0klw"),
"statement": SubResource("Animation_daf3q")
}

[node name="SoundA2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tdm27")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -640.0
offset_right = 360.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 640)

[node name="Face" type="TextureRect" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -296.0
offset_right = 252.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lqufx")

[node name="Mouth" type="Sprite2D" parent="Container/Face"]
position = Vector2(254, 501)
texture = ExtResource("3_0nyda")

[node name="MouthA" type="Sprite2D" parent="Container/Face"]
modulate = Color(1, 1, 1, 0)
position = Vector2(254, 502)
texture = ExtResource("4_8rkmb")

[node name="NoX" type="Sprite2D" parent="Container/Face"]
position = Vector2(307, 387)
texture = ExtResource("5_4qibo")

[node name="Hand" type="Sprite2D" parent="Container/Face"]
position = Vector2(33, 419)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_8shjm")
offset = Vector2(124, 9)

[node name="FaceAnimator" type="AnimationPlayer" parent="Container/Face"]
libraries = {
"": SubResource("AnimationLibrary_7h7xf")
}

[node name="Narrator" type="AudioStreamPlayer" parent="Container/Face"]
volume_db = 5.0
bus = &"Narrator"

[node name="RecordButton" parent="Container" instance=ExtResource("8_alq2t")]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -417.0
offset_right = 120.0
offset_bottom = -177.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.85, 0.85)
max_duration = 2.0

[node name="ConfettiEffect" parent="Container" instance=ExtResource("9_0lwa4")]
position = Vector2(365, 984)

[node name="PredictionComponent" type="HTTPRequest" parent="."]
script = ExtResource("9_dw1um")
endpoint = "word/a"

[node name="TaskAnimator" type="AnimationPlayer" parent="."]
autoplay = "intro"
libraries = {
"": SubResource("AnimationLibrary_gbtgw")
}

[node name="Narrator" type="AudioStreamPlayer" parent="."]
volume_db = 5.0
bus = &"Narrator"

[connection signal="fail" from="Container/RecordButton" to="." method="_on_record_fail"]
[connection signal="finished" from="Container/RecordButton" to="." method="_on_record_finished"]
[connection signal="pressed" from="Container/RecordButton" to="." method="_on_record_button_pressed"]
[connection signal="finished" from="Container/ConfettiEffect" to="." method="_on_confetti_effect_finished"]
